--- a/src/components/Card/style.module.css
+++ b/src/components/Card/style.module.css
@@ -58,13 +58,9 @@
 }
 
 .image_container {
-  height: 200px;
-}
-
-.image {
-  /* background: no-repeat center center;
+  background: no-repeat center center;
   background-size: contain;
-  margin-bottom: 5px; */
+  margin-bottom: 5px;
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
