--- a/src/views/Categories/style.module.css
+++ b/src/views/Categories/style.module.css
@@ -1,6 +1,5 @@
 .grid {
   grid-area: cards;
-  align-self: center;
   max-width: 100vw;
 }
 
@@ -56,6 +55,30 @@
   margin: 1em;
 }
 
+.search_results_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 2rem;
+}
+
+.btn_wrapper {
+  margin-top: 10px;
+  padding: 10px;
+  padding-bottom: 40px;
+}
+
+.btn {
+  background: var(--main-btn-bg);
+  color: var(--main-btn-cl);
+  padding: 10px 20px;
+  margin: 0 -20px;
+  border-radius: 35px;
+  box-shadow: rgba(0, 0, 0, 0.9);
+  transition: all 200ms ease-in-out;
+  text-decoration: none;
+}
+
 .title {
   grid-area: title;
   display: flex;
@@ -76,7 +99,7 @@
 
 /*******************/
 .grid_wrapper {
-  grid-template-rows: min-content min-content min-content 1fr;
+  grid-template-rows: min-content min-content min-content minmax(0, 1fr);
 }
 
 .carroussel {
@@ -91,7 +114,7 @@
 .item {
   width: 80%;
   height: 90%;
-  margin: 4%;
+  margin: 3%;
   flex-shrink: 0;
   scroll-snap-align: center;
   /* background:red; */
