--- a/src/views/Home/style.module.css
+++ b/src/views/Home/style.module.css
@@ -36,13 +36,17 @@
   margin: 0 auto;
 }
 
+.grid_wrapper > div {
+  width: 100vw;
+  padding: 1em
+}
+
 .header {
   grid-area: header;
 }
 
 .welcome {
   grid-area: welcome;
-  margin: 1em;
 }
 .welcome h2 {
   color: var(--main-cl);
@@ -60,8 +64,26 @@
 
 .search_results_container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   padding-top: 2rem;
+}
+
+.btn_wrapper {
+  margin-top: 10px;
+  padding: 10px;
+  padding-bottom: 40px;
+}
+
+.btn {
+  background: var(--main-btn-bg);
+  color: var(--main-btn-cl);
+  padding: 10px 20px;
+  margin: 0 -20px;
+  border-radius: 35px;
+  box-shadow: rgba(0, 0, 0, 0.9);
+  transition: all 200ms ease-in-out;
+  text-decoration: none;
 }
 
 .title {
@@ -69,7 +91,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 1em;
+  /* margin: 1em; */
 }
 
 @media screen and (min-width: 900px) {
